update profile section

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
  
 \begin{resume}
  
-\section{PROFILE}       Significant experience in software development using different approaches. I have worked in Linux, Windows platforms, and in some embedded systems. Most of the time my programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges and for learn new things.
+\section{PROFILE}       Significant experience in software development using different approaches. I have worked in Linux, Windows platforms, and in some embedded systems. Most of the time my programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, for learn new things, and coding the future.
  
  
  \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
