add khomp expirence informations (need refactoring)

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[line,margin]{res} 
+\documentclass[line,margin]{res}
 %\usepackage{newcent}
 
 \AtEndDocument{\hfill \LaTeX}
@@ -9,46 +9,44 @@
 \address{alvarofleith@gmail.com or +64 (09) 889-3534}
 \address{https://linkedin.com/in/alvarofleith}
 
- 
+
 \begin{resume}
- 
+
 \section{PROFILE}       Significant experience in software development using different approaches. I have worked in Linux, Windows platforms, and in some embedded systems. Most of the time my programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, for learn new things, and coding the future.
- 
- 
+
+
  \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
                  \begin{itemize}  \itemsep -2pt
                  \item Building gateways used by telephony companies, call centers and others. All gateways use Unix systems and the applications were written in C ++. I work in front-end, back-end, and adding VoIP features using the SIP protocol. In this workplace we dealing with a large number of scenarios and is a challenge to testing and coverage all possibilities.
+                 \item Working in the telephony gateways products used by telephone companies, call centers and others. All gateways use Unix systems and most of the programs were written in C ++. I work in front-end and back-end, and in most of the time I add VoIP features using the SIP protocol. In this workplace we dealing with a large number of scenarios and is a challenge to testing and coverage all possibilities.
+                 \item Working in Linux embedded systems for VoIP and Telephony.
+                 \item Developing web interfaces for embedded systems.
+                 \item Developing VoIP systems based on SIP protocol and RTP media communication. Interacting with the placeholders to define the backlog. Increment the coverage acceptance tests to evolve faster with quality. Used tools are SIPP, Docker, Gitlab-CI, and others.
+                 \item Add new features to the frontend/backend of an embedded system, using JavaScript, JQuery, AngularJS, RPC and others.
                 \end{itemize}
- 
+
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
                  \begin{itemize}  \itemsep -2pt
                  \item Full stack developer of www.festaninja.com.br using Django, Heroku and AWS, and business development too.
-                 \end{itemize} 
+                 \end{itemize}
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
                    \item Data interchange using hybrid solutions Python and C++, BDD, and TDD methodologies.
-                   \end{itemize} 
+                   \end{itemize}
    {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
                    \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features.
-                   \end{itemize} 
+                   \end{itemize}
                      {\sl Graduate Trainee, Reivax} \hfill Dec 2004 to June 2006 \\
                   \begin{itemize}
                    \item Develop solutions for hardware/software integration in R\&D sector, and interact with support team to fix issues.
-                   \end{itemize} 
+                   \end{itemize}
 \section{EDUCATION} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
- 
- 
+
+
 \section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} Object Oriented Programming, Design Patterns, Extreme Programing, C++, STL, Boost C++, Network, SIP protocol, Embedded Systems, Version Control System (GIT, SVN), Java, Ruby, Python. \\
                 {\sl Operating Systems:} Linux, MacOS, and Windows.
- 
+
 \end{resume}
 \end{document}
-
-
-
-
-
-
-
