--- a/resume.tex
+++ b/resume.tex
@@ -27,19 +27,17 @@
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Full stack developer of www.festaninja.com.br using Django, Heroku and AWS, and business development too.
+                 \item Full stack developer of www.festaninja.com.br using Django, Python, Heroku and AWS, and business development too. Developing Business Model (MVP based on Lean Startup). tools used PyCharm, Python, Git, JavaScript, SendGrid, others.
                  \end{itemize}
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
-                   \item Data interchange using hybrid solutions Python and C++, BDD, and TDD methodologies.
+                   \item Data interchange using hybrid solutions Python and C++, BDD, and TDD methodologies. Introduce BDD to the team, improve performance using GitLab tool, and convert python models to C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++.
+                   \item Team leader
+                   \item Migrate an embedded system to run on multi-platform and cover with UnitTests and Acceptance tests. Create a continuous integration to run all automated testes and deploy to a clients. Boost C++, Linux/Windows/Cross-compiling, Jenkins, others.
                    \end{itemize}
    {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
-                   \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features.
-                   \end{itemize}
-                     {\sl Graduate Trainee, Reivax} \hfill Dec 2004 to June 2006 \\
-                  \begin{itemize}
-                   \item Develop solutions for hardware/software integration in R\&D sector, and interact with support team to fix issues.
+                   \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features. (Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n, etc.)
                    \end{itemize}
 \section{EDUCATION} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
@@ -47,6 +45,6 @@
 
 \section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} Object Oriented Programming, Design Patterns, Extreme Programing, C++, STL, Boost C++, Network, SIP protocol, Embedded Systems, Version Control System (GIT, SVN), Java, Ruby, Python. \\
                 {\sl Operating Systems:} Linux, MacOS, and Windows.
-
+                Solving Problems, Self Learn, Teamwork and others with less importance.                Object Oriented Programming, C/C++, Design Patterns, Extreme Programing, STL, Boost C++, Operating Systems (Windows and Unix), Version Control System (GIT, SVN), Embedded Systems, Python, AmazonWS, Continuous Delivery, Continuous Integration, Web Development, Shell Script, Unit Tests, Integration Tests, Acceptance Tests, Qt (toolkit), Scrum, CMake, Conan, Heroku, Travis-CI, Django, Regular Expressions, TDD, SIP, Tcp/Ip, Network.
 \end{resume}
 \end{document}
