improve Khomp expirence

--- a/resume.tex
+++ b/resume.tex
@@ -17,25 +17,22 @@
 
  \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Building gateways used by telephony companies, call centers and others. All gateways use Unix systems and the applications were written in C ++. I work in front-end, back-end, and adding VoIP features using the SIP protocol. In this workplace we dealing with a large number of scenarios and is a challenge to testing and coverage all possibilities.
-                 \item Working in the telephony gateways products used by telephone companies, call centers and others. All gateways use Unix systems and most of the programs were written in C ++. I work in front-end and back-end, and in most of the time I add VoIP features using the SIP protocol. In this workplace we dealing with a large number of scenarios and is a challenge to testing and coverage all possibilities.
-                 \item Working in Linux embedded systems for VoIP and Telephony.
-                 \item Developing web interfaces for embedded systems.
-                 \item Developing VoIP systems based on SIP protocol and RTP media communication. Interacting with the placeholders to define the backlog. Increment the coverage acceptance tests to evolve faster with quality. Used tools are SIPP, Docker, Gitlab-CI, and others.
-                 \item Add new features to the frontend/backend of an embedded system, using JavaScript, JQuery, AngularJS, RPC and others.
+                 \item Add features to Khomp Media Gateway for working in call centers and carriers. Working in a SBC (Session Boarder Controller) in C++ based on SIP protocol. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, RPC, JavaScript, Share Knowledge, Telephony]
                 \end{itemize}
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
                  \begin{itemize}  \itemsep -2pt
                  \item Full stack developer of www.festaninja.com.br using Django, Python, Heroku and AWS, and business development too. Developing Business Model (MVP based on Lean Startup). tools used PyCharm, Python, Git, JavaScript, SendGrid, others.
                  \end{itemize}
+
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
                    \item Data interchange using hybrid solutions Python and C++, BDD, and TDD methodologies. Introduce BDD to the team, improve performance using GitLab tool, and convert python models to C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++.
                    \item Team leader
                    \item Migrate an embedded system to run on multi-platform and cover with UnitTests and Acceptance tests. Create a continuous integration to run all automated testes and deploy to a clients. Boost C++, Linux/Windows/Cross-compiling, Jenkins, others.
                    \end{itemize}
-   {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
+
+                {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
                    \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features. (Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n, etc.)
                    \end{itemize}
