improve FestaNinja expirience

--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,7 @@
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Full stack developer of www.festaninja.com.br using Django, Python, Heroku and AWS, and business development too. Developing Business Model (MVP based on Lean Startup). tools used PyCharm, Python, Git, JavaScript, SendGrid, others.
+                 \item Full stack developer of www.festaninja.com.br, and business development with co-founders. Skills [MVP, Lean Startup, PyCharm, Python, Git, JavaScript, Django, AWS, Heroku]
                  \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
