improve experience  Audaces Mar 2015 to Fev 2016

--- a/resume.tex
+++ b/resume.tex
@@ -27,9 +27,8 @@
 
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
-                   \item Data interchange using hybrid solutions Python and C++, BDD, and TDD methodologies. Introduce BDD to the team, improve performance using GitLab tool, and convert python models to C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++.
-                   \item Team leader
-                   \item Migrate an embedded system to run on multi-platform and cover with UnitTests and Acceptance tests. Create a continuous integration to run all automated testes and deploy to a clients. Boost C++, Linux/Windows/Cross-compiling, Jenkins, others.
+                    \item Data interchange using Python and C++ in an hybrid solution. Improve integration tests with BDD methodology. Skills [C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++, Team leader, Embedded System, Acceptance Tests, Unit Tests, BDD, TDD, CI]
+                    \item Migrate an embedded system to run on multi-platform and save time/money for that flexibility, at the same time cover with a lot of tests. Skills [xUnits, Acceptance Tests, C++, Boost C++, CI].
                    \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
