improve section SKILLS

--- a/resume.tex
+++ b/resume.tex
@@ -33,14 +33,10 @@
 
                 {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
-                   \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features. (Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n, etc.)
+                   \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features. Skills [Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n]
                    \end{itemize}
 \section{EDUCATION} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
-
-
-\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} Object Oriented Programming, Design Patterns, Extreme Programing, C++, STL, Boost C++, Network, SIP protocol, Embedded Systems, Version Control System (GIT, SVN), Java, Ruby, Python. \\
-                {\sl Operating Systems:} Linux, MacOS, and Windows.
-                Solving Problems, Self Learn, Teamwork and others with less importance.                Object Oriented Programming, C/C++, Design Patterns, Extreme Programing, STL, Boost C++, Operating Systems (Windows and Unix), Version Control System (GIT, SVN), Embedded Systems, Python, AmazonWS, Continuous Delivery, Continuous Integration, Web Development, Shell Script, Unit Tests, Integration Tests, Acceptance Tests, Qt (toolkit), Scrum, CMake, Conan, Heroku, Travis-CI, Django, Regular Expressions, TDD, SIP, Tcp/Ip, Network.
+\section{GENERIC SKILLS} Solving Problems, Self Learn, and Teamwork.
 \end{resume}
 \end{document}
