improvements by review

--- a/resume.tex
+++ b/resume.tex
@@ -12,28 +12,28 @@
 
 \begin{resume}
 
-\section{PROFILE}       Significant experience in software development using different approaches. I have worked in Linux, Windows platforms, and in some embedded systems. Most of the time my programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, for learn new things, and coding the future.
+\section{PROFILE}       I am a result driven software developer involved in different approaches. I have worked on both Linux and Windows platforms, as well as on embedded systems. My main programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, by learning new things, and coding the future.
 
 
  \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Add features to Khomp Media Gateway for working in call centers and carriers. Working in a SBC (Session Boarder Controller) in C++ based on SIP protocol. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, RPC, JavaScript, Share Knowledge, Telephony]
+                 \item I work on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Currently working in a SBC (Session Border Controller) over SIP protocol. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
                 \end{itemize}
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Full stack developer of www.festaninja.com.br, and business development with co-founders. Skills [MVP, Lean Startup, PyCharm, Python, Git, JavaScript, Django, AWS, Heroku]
+                 \item As a full stack developer at www.festaninja.com.br, also involved in business development with co-founders. Skills [MVP, Lean Startup, PyCharm, Python, Git, JavaScript, Django, AWS, Heroku].
                  \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
-                    \item Data interchange using Python and C++ in an hybrid solution. Improve integration tests with BDD methodology. Skills [C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++, Team leader, Embedded System, Acceptance Tests, Unit Tests, BDD, TDD, CI]
-                    \item Migrate an embedded system to run on multi-platform and save time/money for that flexibility, at the same time cover with a lot of tests. Skills [xUnits, Acceptance Tests, C++, Boost C++, CI].
+                    \item Worked on data interchange using Python and C++ in a hybrid solution. Improved integration tests with BDD methodology. Skills [C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++, Team leader, Embedded System, Acceptance Tests, Unit Tests, BDD, TDD, CI].
+                    \item Migrated an embedded system to run on multi-platform, saving time/money for that flexibility and covering the code with several tests. Skills [xUnits, Acceptance Tests, C++, Boost C++, CI].
                    \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
-                   \item Working in fashion and apparel products for improve the clients efficiency. At that time I had worked in some projects like CAD/CAM/Design software wrote in C++ language. The most challenge was improve legacy code into a new reusable and better for maintenance, using technics like TDD, Continuous Integration, and others. When the team was migrating the legacy code we had to dealing with the schedule to add new features. Skills [Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n]
+                   \item Worked on fashion and apparel products for increased efficiency with the clients. At that time I worked in some projects such as CAD/CAM designs and wrote in C++ language. The most challenging goal was to improve legacy code, implementing new reusability and enhanced maintenance, using techniques such as TDD, Continuous Integration, and others. Moreover, the schedule included the adding of new features. Skills [Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n].
                    \end{itemize}
 \section{EDUCATION} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
