Fix preposition and improve readability.

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
 
  \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item I work on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Currently working in a SBC (Session Border Controller) over SIP protocol. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
+                 \item I work on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Currently working on a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
                 \end{itemize}
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
