Add current job at Autodesk

--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,12 @@
 \section{PROFILE}       I am a result driven software developer involved in different approaches. I have worked on both Linux and Windows platforms, as well as on embedded systems. My main programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, by learning new things, and coding the future.
 
 
- \section{EXPERIENCE} {\sl Software Developer, KHOMP} \hfill Mar 2016 to present \\
+ \section{EXPERIENCE} {\sl Software Developer, Autodesk} \hfill Nov 2017 to present \\
+                 \begin{itemize}  \itemsep -2pt
+                 \item Developing new features in Maya project (https://www.autodesk.com/products/maya).
+                \end{itemize}
+ 
+                {\sl Software Developer, KHOMP} \hfill Mar 2016 to Nov 2017 \\
                  \begin{itemize}  \itemsep -2pt
                  \item I work on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Currently working on a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
                 \end{itemize}
