Fix verb tenses in Khomp description

--- a/resume.tex
+++ b/resume.tex
@@ -17,12 +17,12 @@
 
  \section{EXPERIENCE} {\sl Software Developer, Autodesk} \hfill Nov 2017 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Developing new features in Maya project (https://www.autodesk.com/products/maya).
+                 \item Developing new features in Maya project (https://www.autodesk.com/products/maya). Skills [C++, Python, 3D, JavaScript, MEL, Tests]
                 \end{itemize}
  
                 {\sl Software Developer, KHOMP} \hfill Mar 2016 to Nov 2017 \\
                  \begin{itemize}  \itemsep -2pt
-                 \item I work on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Currently working on a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
+                 \item Worked on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Added features in a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
                 \end{itemize}
 
                 {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
