--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,12 @@
 \section{PROFILE}       I am a result driven software developer involved in different approaches. I have worked on both Linux and Windows platforms, as well as on embedded systems. My main programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, by learning new things, and coding the future.
 
 
- \section{EXPERIENCE} {\sl Software Developer, Autodesk} \hfill Nov 2017 to present \\
+ \section{EXPERIENCE} {\sl Software Development Engineer, Amazon} \hfill Oct 2019 to present \\
+                 \begin{itemize}  \itemsep -2pt
+                 \item Working at Amazon Web Services
+                \end{itemize}
+                
+                {\sl Software Developer, Autodesk} \hfill Nov 2017 to Sep 2019 \\
                  \begin{itemize}  \itemsep -2pt
                  \item Developing new features in Maya project (https://www.autodesk.com/products/maya). Skills [C++, Python, 3D, JavaScript, MEL, Tests]
                 \end{itemize}
