Fix FestaNinja dates

--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
                  \item Worked on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Added features in a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
                 \end{itemize}
 
-                {\sl Co Founder, Festa Ninja} \hfill Jan 2015 to present \\
+                {\sl Co Founder, Festa Ninja} \hfill Oct 2014 to Dec 2016 \\
                  \begin{itemize}  \itemsep -2pt
                  \item As a full stack developer at www.festaninja.com.br, also involved in business development with co-founders. Skills [MVP, Lean Startup, PyCharm, Python, Git, JavaScript, Django, AWS, Heroku].
                  \end{itemize}
