Add AWS job info

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,12 @@
 
  \section{EXPERIENCE} {\sl Software Development Engineer, Amazon} \hfill Oct 2019 to present \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Working at Amazon Web Services
+                 \item As a Software Development Engineer, develops, designs, and implements software features for the AWS Support organization.
+                 \item Interviews candidates as well as mentors colleagues and interns.
+                 \item Provides technical leadership for the team, interacts with stakeholders and supports the product from an
+operational perspective.
+                 \item Designs and develops large-scale, multi-tiered, multi-threaded distributed software applications, tools, systems,
+and services using Java, Python and Object Oriented Design.
                 \end{itemize}
                 
                 {\sl Software Developer, Autodesk} \hfill Nov 2017 to Sep 2019 \\
