Resume with 3 pages.

--- a/resume.tex
+++ b/resume.tex
@@ -6,18 +6,30 @@
 \begin{document}
 
 \name{Alvaro Francisco Fleith}
-\address{alvarofleith@gmail.com or +27 (66) 019-2899}
-\address{https://linkedin.com/in/alvarofleith}
+\address{alvarofleith@gmail.com}
 
 
 \begin{resume}
 
-\section{PROFILE}       I am a result driven software developer involved in different approaches. I have worked on both Linux and Windows platforms, as well as on embedded systems. My main programming language is C++, but over the years I have used Python and other languages. I am motivated by challenges, by learning new things, and coding the future.
+\section{Summary}       Results-oriented Senior Software Engineer with extensive experience in embedded systems, C++, Python, and Rust. Skilled in designing scalable, high-performance applications and leading complex projects across diverse platforms. Adept at collaborating with stakeholders, mentoring teams, and driving innovation through modern development practices. Passionate about solving challenging problems and optimizing workflows.
 
 
- \section{EXPERIENCE} {\sl Software Development Engineer, Amazon} \hfill Oct 2019 to present \\
+ \section{Experience} 
+
+{\sl Senior Software Development Engineer, Amazon} \hfill Nov 2021 to present \\
+                 \begin{itemize}  \itemsep -2pt
+                 \item As a Senior Software Development Engineer at Amazon Devices, I work on the Fire TV platform, focusing on embedded systems and Mobile Android applications.
+		 \item Utilize Rust, Java, and C/C++ to develop high-performance applications, designing, implementing, and optimizing software solutions to enhance the functionality and performance of Fire TV products.               
+		 \item Lead complex projects, coordinating efforts across cross-functional teams to deliver innovative features and improvements to Fire TV products.
+                 \item Conduct interviews for technical candidates, mentoring team members, and driving initiatives to foster team growth and technical excellence.
+                 \item Deliver presentations to the team, sharing knowledge on best practices, project updates, and technical solutions to ensure alignment and continuous learning.
+                \end{itemize}
+
+
+{\sl Software Development Engineer, Amazon} \hfill Oct 2019 to Nov 2021 \\
                  \begin{itemize}  \itemsep -2pt
                  \item As a Software Development Engineer, develops, designs, and implements software features for the AWS Support organization.
+                 \item Led a project to migrate Support APIs to a new downstream system, enabling multi-region support and significantly improving the resilience and reliability of the service.
                  \item Interviews candidates as well as mentors colleagues and interns.
                  \item Provides technical leadership for the team, interacts with stakeholders and supports the product from an
 operational perspective.
@@ -27,31 +39,44 @@ and services using Java, Python and Object Oriented Design.
                 
                 {\sl Software Developer, Autodesk} \hfill Nov 2017 to Sep 2019 \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Developing new features in Maya project (https://www.autodesk.com/products/maya). Skills [C++, Python, 3D, JavaScript, MEL, Tests]
+                 \item Enhanced the Maya project by developing new features and optimizing performance for 3D design and animation tools, working extensively with MEL, Python, and C/C++ languages.
+		 \item Improved the stability of the playback feature by reducing the refresh frame rate error from 20ms to less than 1ms. This enhancement minimized reliance on time-consuming playblasts, which previously took minutes, significantly accelerating customer workflows.
+                 \item Conducted research on LLVM UBSan to detect hidden bugs in the Maya project, presenting findings to the team and implementing fixes that increased application stability and reliability.
+                 \item Contributed to the development of the LookdevX plugin in partnership with the open-source MaterialX library, created by Lucasfilm, enabling advanced look development workflows and enhanced interoperability with industry-standard tools.
                 \end{itemize}
- 
+
                 {\sl Software Developer, KHOMP} \hfill Mar 2016 to Nov 2017 \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Worked on adding features to Khomp Media Gateway that are aimed at call centers and carriers. Added features in a SBC (Session Border Controller) for session-oriented IP services, based on SIP. Skills [C++, SIP, Docker, SIPP Acceptance Tests, Network, Linux, Gitlab, RTP, JavaScript, Share Knowledge, Telephony].
+                 \item Led the development and enhancement of the Session Border Controller (SBC) project, collaborating with partners to support their migration to Khomp's solution, working extensively with C/C++, JavaScript, and PHP.
+                 \item Added advanced functionality to the SBC for session-oriented IP services using the SIP protocol, improving system reliability and scalability for telephony applications.
+                 \item Developed and implemented new features for the Khomp Media Gateway, delivering solutions tailored to call centers and carriers.
+                 \item Conducted extensive testing using SIPP and Docker, ensuring robust performance and compatibility for telephony systems.
+                 \item Collaborated with cross-functional teams to optimize network protocols, streamline development workflows with GitLab, and integrate features seamlessly across Linux-based systems.
+                 \item Actively engaged in knowledge sharing and mentoring, fostering a culture of collaboration and continuous learning.
                 \end{itemize}
 
                 {\sl Co Founder, Festa Ninja} \hfill Oct 2014 to Dec 2016 \\
                  \begin{itemize}  \itemsep -2pt
-                 \item As a full stack developer at www.festaninja.com.br, also involved in business development with co-founders. Skills [MVP, Lean Startup, PyCharm, Python, Git, JavaScript, Django, AWS, Heroku].
-                 \end{itemize}
+                 \item Co-founded and developed Festa Ninja, an event planning platform, acting as a full-stack developer and contributing to business development strategies with the co-founding team.
+                 \item Designed and implemented a robust MVP using Python, Django, and JavaScript, ensuring rapid feature deployment and scalability.
+                 \item Deployed and managed cloud-based solutions using AWS and Heroku, optimizing application performance and uptime.
+                 \item Applied Lean Startup methodologies to iterate product features based on customer feedback, improving user engagement and satisfaction.
+                 \item Utilized tools such as PyCharm and Git to maintain code quality and streamline development workflows.             
+
+\end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
-                    \item Worked on data interchange using Python and C++ in a hybrid solution. Improved integration tests with BDD methodology. Skills [C++. PyCharm, C++, Python, GitLab, Jenkins, GoogleTest, Behave, Boost C++, Team leader, Embedded System, Acceptance Tests, Unit Tests, BDD, TDD, CI].
-                    \item Migrated an embedded system to run on multi-platform, saving time/money for that flexibility and covering the code with several tests. Skills [xUnits, Acceptance Tests, C++, Boost C++, CI].
+                    \item Led the development and maintenance of a hybrid solution for data interchange using Python and C++, collaborating with stakeholders to define project goals and ensure alignment with business objectives. Improved integration tests on Python code using Behavior-Driven Development (BDD) methodology, reducing customer-reported bugs by 90\% and enhancing test coverage and reliability.
+                    \item Led the migration of an embedded system to a multi-platform architecture, collaborating with a partner company responsible for hardware design. Managed deliverables, ensured timely integration, and developed the embedded software to maximize system flexibility and reduce development time and costs.
                    \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
-                   \item Worked on fashion and apparel products for increased efficiency with the clients. At that time I worked in some projects such as CAD/CAM designs and wrote in C++ language. The most challenging goal was to improve legacy code, implementing new reusability and enhanced maintenance, using techniques such as TDD, Continuous Integration, and others. Moreover, the schedule included the adding of new features. Skills [Qt, MVC, CMake, Jenkins, GitLab, Python, CI, CD, SVG, i18n].
-                   \end{itemize}
-\section{EDUCATION} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
+                   \item Designed and maintained CAD/CAM software solutions for the fashion and apparel industry, delivering high-performance applications in C++ that enhanced client productivity and workflow efficiency. Led efforts to modernize legacy code by introducing TDD, Continuous Integration (CI), and modular design, improving maintainability and reusability.
+\item Developed and implemented new features under tight schedules while leveraging tools and frameworks such as Qt, MVC, CMake, and Jenkins. Incorporated advanced features like SVG rendering and internationalization (i18n) to support a diverse, global user base.              
+\end{itemize}
+\section{Education} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
-\section{GENERIC SKILLS} Solving Problems, Self Learn, and Teamwork.
 \end{resume}
 \end{document}
