Resume with 2 pages.

--- a/resume.tex
+++ b/resume.tex
@@ -57,24 +57,22 @@ and services using Java, Python and Object Oriented Design.
 
                 {\sl Co Founder, Festa Ninja} \hfill Oct 2014 to Dec 2016 \\
                  \begin{itemize}  \itemsep -2pt
-                 \item Co-founded and developed Festa Ninja, an event planning platform, acting as a full-stack developer and contributing to business development strategies with the co-founding team.
-                 \item Designed and implemented a robust MVP using Python, Django, and JavaScript, ensuring rapid feature deployment and scalability.
-                 \item Deployed and managed cloud-based solutions using AWS and Heroku, optimizing application performance and uptime.
-                 \item Applied Lean Startup methodologies to iterate product features based on customer feedback, improving user engagement and satisfaction.
-                 \item Utilized tools such as PyCharm and Git to maintain code quality and streamline development workflows.             
+                 \item Co-founded an event planning platform, building a robust MVP with Python, Django, and JavaScript.               
+                 \item Managed cloud deployments on AWS and Heroku, improving scalability and uptime.
+                 \item Applied Lean Startup methodologies to iterate features and enhance user engagement.
 
 \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Mar 2015 to Fev 2016 \\
                   \begin{itemize}
-                    \item Led the development and maintenance of a hybrid solution for data interchange using Python and C++, collaborating with stakeholders to define project goals and ensure alignment with business objectives. Improved integration tests on Python code using Behavior-Driven Development (BDD) methodology, reducing customer-reported bugs by 90\% and enhancing test coverage and reliability.
-                    \item Led the migration of an embedded system to a multi-platform architecture, collaborating with a partner company responsible for hardware design. Managed deliverables, ensured timely integration, and developed the embedded software to maximize system flexibility and reduce development time and costs.
+                    \item Led the development of a hybrid solution for data interchange, reducing customer bugs by 90\% through improved testing practices.
+                    \item Migrated an embedded system to a multi-platform architecture, collaborating with hardware partners and managing deliverables.
                    \end{itemize}
 
                 {\sl Software Developer, Audaces} \hfill Oct 2006 to Oct 2014 \\
                   \begin{itemize}
-                   \item Designed and maintained CAD/CAM software solutions for the fashion and apparel industry, delivering high-performance applications in C++ that enhanced client productivity and workflow efficiency. Led efforts to modernize legacy code by introducing TDD, Continuous Integration (CI), and modular design, improving maintainability and reusability.
-\item Developed and implemented new features under tight schedules while leveraging tools and frameworks such as Qt, MVC, CMake, and Jenkins. Incorporated advanced features like SVG rendering and internationalization (i18n) to support a diverse, global user base.              
+                   \item Designed and maintained CAD/CAM software for the fashion industry, modernizing legacy code with TDD and CI practices.
+\item Delivered high-performance applications in C++ while adding features under tight deadlines, leveraging frameworks like Qt and CMake.              
 \end{itemize}
 \section{Education} {\sl Bachelor of Computer Engineering} \hfill Dec 2009\\
                 UNIVALI, Sao Jose, Brazil
